src/renderer/components/Gallery/SnapshotPreview.module.scss
.singleSnapshot {
  display: flex;
  align-items: center;
  width: 100%;

  .snapshotPreviewContainer {
    display: flex;
    justify-content: space-between;
    width: 43rem;
    background-color: var(--bg-color-3);
    padding: 1rem;
    border: solid var(--bg-color-1) 2px;
    border-radius: var(--border-radius);

    .left {
      width: 30rem;

      .upper {
        display: flex;
        justify-content: space-between;

        .timeAndName {
          display: flex;

          .time {
            margin-right: 0.8rem;
            font-weight: 300;
          }

          .name {
            font-weight: 700;
          }
        }

        .applications {
          .icon {
            margin-left: 0.3rem;
            height: 1.5rem;
            cursor: pointer;
          }
        }

      }

      .applicationsWithMoreContext {
        display: flex;
        flex-wrap: wrap;
      }
    }

    .right {
      .postIt {
        background-color: var(--postIt-bg-color-2);
        border-radius: var(--border-radius);
        padding: 0.2rem;
        height: 5rem;
        width: 15rem;
        font-size: small;
        margin-left: 1rem;
        color: var(--postIt-text-color);
      }

      .intent {
        margin-top: 1rem;
      }
    }

  }

  .buttonBox {
    display: flex;
    align-items: center;

    .dot {
      margin-left: 1.5rem;
      background-color: var(--accent-color-2);
      border-radius: 50%;
      width: 2rem;
      height: 2rem;
      cursor: pointer;


      .icon {
        height: 1rem;
        margin: 0.5rem;
        fill: var(--border-color);
      }
    }

    .dot.edit:hover {
      transform: scale(1.05);
      transition: all ease-in 0.1s;
    }

    .dot.delete {
      background-color: red;

      &:hover {
        transform: scale(1.05);
        transition: all ease-in 0.1s;
      }
    }

    .dot.restore {
      display: flex;
      align-items: center;
      background-color: var(--accent-color-1);

      .icon {
        margin-left: 0.6rem;
      }

      span {
        display: none;
        font-size: small;
      }

      &:hover {
        width: 6rem;
        border-radius: 2rem / 2rem;

        span {
          display: block;
        }
      }
    }
  }
}

